@@ -1,9 +1,6 @@
 package org.brapi.test.BrAPITestServer.service.germ;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import io.swagger.model.IndexPagination;
 import jakarta.validation.Valid;
@@ -50,16 +47,16 @@ public class CrossingProjectService {
 				CrossingProjectEntity.class);
 
 		if (crossingProjectDbId != null)
-			searchQuery = searchQuery.appendSingle(crossingProjectDbId, "id");
+			searchQuery = searchQuery.appendSingle(UUID.fromString(crossingProjectDbId), "id");
 		if (crossingProjectName != null)
 			searchQuery = searchQuery.appendSingle(crossingProjectName, "name");
 		if (commonCropName != null)
 			searchQuery = searchQuery.appendSingle(commonCropName, "crop.crop_name");
 		if (programDbId != null)
-			searchQuery = searchQuery.appendSingle(programDbId, "program.id");
+			searchQuery = searchQuery.appendSingle(UUID.fromString(programDbId), "program.id");
 		if (externalReferenceID != null && externalReferenceSource != null)
-			searchQuery = searchQuery.withExRefs(Arrays.asList(externalReferenceID),
-					Arrays.asList(externalReferenceSource));
+			searchQuery = searchQuery.withExRefs(List.of(externalReferenceID),
+                    List.of(externalReferenceSource));
 
 		Page<CrossingProjectEntity> page = crossingProjectRepository.findAllBySearchAndPaginate(searchQuery, pageReq);
 		List<CrossingProject> crossingProjects = new ArrayList<>();
@@ -71,7 +68,13 @@ public class CrossingProjectService {
 	}
 
 	public List<CrossingProjectEntity> findCrossingProjectsByIds(List<String> crossingProjectIds) {
-		return crossingProjectRepository.findByIdIn(crossingProjectIds);
+		var result = new ArrayList<CrossingProjectEntity>();
+
+		if (crossingProjectIds.isEmpty()) {
+			return result;
+		}
+
+		return crossingProjectRepository.findByIdIn(crossingProjectIds.stream().map(UUID::fromString).toList());
 	}
 
 	public CrossingProject getCrossingProject(String crossingProjectDbId) throws BrAPIServerException {
@@ -85,7 +88,7 @@ public class CrossingProjectService {
 	public CrossingProjectEntity getCrossingProjectEntity(String crossingProjectDbId, HttpStatus errorStatus)
 			throws BrAPIServerException {
 		CrossingProjectEntity crossingProject = null;
-		Optional<CrossingProjectEntity> entityOpt = crossingProjectRepository.findById(crossingProjectDbId);
+		Optional<CrossingProjectEntity> entityOpt = crossingProjectRepository.findById(UUID.fromString(crossingProjectDbId));
 		if (entityOpt.isPresent()) {
 			crossingProject = entityOpt.get();
 		} else {
@@ -128,11 +131,11 @@ public class CrossingProjectService {
 		CrossingProject project = new CrossingProject();
 		UpdateUtility.convertFromEntity(entity, project);
 
-		project.setCrossingProjectDbId(entity.getId());
+		project.setCrossingProjectDbId(entity.getId().toString());
 		project.setCrossingProjectDescription(entity.getDescription());
 		project.setCrossingProjectName(entity.getName());
 		if (entity.getProgram() != null) {
-			project.setProgramDbId(entity.getProgram().getId());
+			project.setProgramDbId(entity.getProgram().getId().toString());
 			project.setProgramName(entity.getProgram().getName());
 			if (entity.getProgram().getCrop() != null) {
 				project.setCommonCropName(entity.getProgram().getCrop().getCropName());
