@@ -163,7 +163,7 @@ public class PedigreeService {
 
 	public Optional<PedigreeNodeEntity> getPedigreeNode(String germplasmDbId) {
 		Optional<PedigreeNodeEntity> node = Optional.empty();
-		List<PedigreeNodeEntity> nodeList = pedigreeRepository.findByGermplasm_Id(germplasmDbId);
+		List<PedigreeNodeEntity> nodeList = pedigreeRepository.findByGermplasm_Id(UUID.fromString(germplasmDbId));
 		if (nodeList.size() == 1) {
 			node = Optional.of(nodeList.get(0));
 		} else if (nodeList.size() > 1) {
@@ -178,7 +178,7 @@ public class PedigreeService {
 		// TODO: Might have to make a custom query for this that fetches the germ eagerly, bc need to compare the germIds.  Have to see if this is a significant performance hit.
 		List<PedigreeNodeEntity> dbNodeList = pedigreeRepository.findByGermplasm_IdIn(germplasmDbIds);
 
-		Map<String, List<PedigreeNodeEntity>> nodesGroupedByGerm = dbNodeList.stream().collect(Collectors.groupingBy(pn -> pn.getGermplasm().getId()));
+		Map<String, List<PedigreeNodeEntity>> nodesGroupedByGerm = dbNodeList.stream().collect(Collectors.groupingBy(pn -> pn.getGermplasm().getId().toString()));
 
 		nodesGroupedByGerm.forEach((germId, nodesByGerm) -> {
 			if (nodesByGerm.size() > 1) {
@@ -202,7 +202,7 @@ public class PedigreeService {
 		// TODO: Check if the germEntity is already populated by getPedigreeNodes, and if this block results in more DB transactions.
 		Set<String> germIdsOfFoundNodes = resultingNodes.stream()
 				.map(PedigreeNodeEntity::getGermplasm)
-				.map(BrAPIBaseEntity::getId)
+				.map(e -> e.getId().toString())
 				.collect(Collectors.toSet());
 
 		List<String> germIdsWithNoPedigreeRecord = germplasmDbIds.stream()
@@ -266,13 +266,13 @@ public class PedigreeService {
 			PedigreeNodeEntity pedigreeEntity = pedigreeEntityOpt.get();
 			result = new ProgenyNode();
 			result.setProgeny(new ArrayList<>());
-			result.setGermplasmDbId(pedigreeEntity.getGermplasm().getId());
+			result.setGermplasmDbId(pedigreeEntity.getGermplasm().getId().toString());
 			result.setGermplasmName(pedigreeEntity.getGermplasm().getGermplasmName());
 
 			for (PedigreeNodeEntity progenyNode : pedigreeEntity.getProgenyNodes()) {
 				ProgenyNodeProgeny progeny = new ProgenyNodeProgeny();
 				progeny.setGermplasmName(progenyNode.getGermplasm().getGermplasmName());
-				progeny.setGermplasmDbId(progenyNode.getGermplasm().getId());
+				progeny.setGermplasmDbId(progenyNode.getGermplasm().getId().toString());
 				if (progenyNode.getParentEdges() != null && !progenyNode.getParentEdges().isEmpty()) {
 					progeny.setParentType(progenyNode.getParentEdges().get(0).getParentType());
 				}
@@ -379,7 +379,7 @@ public class PedigreeService {
 		Map<String, PedigreeNode> updatePedigreeNodes = new HashMap<>();
 
 		Map<String, PedigreeNodeEntity> nodesByGermplasm = getExistingPedigreeNodes(
-				data.stream().map(p -> p.getGermplasmDbId()).collect(Collectors.toList()));
+				data.stream().map(Germplasm::getGermplasmDbId).toList());
 
 		for (Germplasm germplasm : data) {
 			if (nodesByGermplasm.containsKey(germplasm.getGermplasmDbId())) {
@@ -415,8 +415,8 @@ public class PedigreeService {
 			List<PedigreeNodeEntity> nodeEntities = findPedigreeEntities(searchReq, metadata);
 
 			for (PedigreeNodeEntity nodeEntity : nodeEntities) {
-				if (nodeEntity.getGermplasm() != null && nodeEntity.getGermplasm().getId() != null) {
-					nodesByGermplasm.put(nodeEntity.getGermplasm().getId(), nodeEntity);
+				if (nodeEntity.getGermplasm() != null && nodeEntity.getGermplasm().getId().toString() != null) {
+					nodesByGermplasm.put(nodeEntity.getGermplasm().getId().toString(), nodeEntity);
 				}
 			}
 		}
@@ -438,7 +438,7 @@ public class PedigreeService {
 		// an entry for records with null germplasm which is not desired in output. Filtering out here for now.
 		List<PedigreeNodeEntity> filteredBaseNodes = baseNodes.stream()
 				.filter(node -> node.getGermplasm() != null)
-				.collect(Collectors.toList());
+				.toList();
 
 		Set<PedigreeNodeEntity> baseNodesSet = new HashSet<>(filteredBaseNodes);
 		Set<PedigreeNodeEntity> pedigreeTree = new HashSet<>(filteredBaseNodes);
@@ -486,16 +486,16 @@ public class PedigreeService {
 			UpdateUtility.convertFromEntity(entity, node);
 			if (entity.getGermplasm() != null) {
 				node.setDefaultDisplayName(entity.getGermplasm().getDefaultDisplayName());
-				node.setGermplasmDbId(entity.getGermplasm().getId());
+				node.setGermplasmDbId(entity.getGermplasm().getId().toString());
 				node.setGermplasmName(entity.getGermplasm().getGermplasmName());
 				node.setGermplasmPUI(entity.getGermplasm().getGermplasmPUI());
 				if (entity.getGermplasm().getBreedingMethod() != null) {
-					node.setBreedingMethodDbId(entity.getGermplasm().getBreedingMethod().getId());
+					node.setBreedingMethodDbId(entity.getGermplasm().getBreedingMethod().getId().toString());
 					node.setBreedingMethodName(entity.getGermplasm().getBreedingMethod().getName());
 				}
 			}
 			if (entity.getCrossingProject() != null) {
-				node.setCrossingProjectDbId(entity.getCrossingProject().getId());
+				node.setCrossingProjectDbId(entity.getCrossingProject().getId().toString());
 			}
 			node.setCrossingYear(entity.getCrossingYear());
 			node.setFamilyCode(entity.getFamilyCode());
@@ -503,7 +503,7 @@ public class PedigreeService {
 			if (entity.getParentEdges() != null && request.isIncludeParents()) {
 				node.setParents(entity.getParentEdges().stream().map(edge -> {
 					PedigreeNodeParents parent = new PedigreeNodeParents();
-					parent.setGermplasmDbId(edge.getConnectedNode().getGermplasm().getId());
+					parent.setGermplasmDbId(edge.getConnectedNode().getGermplasm().getId().toString());
 					parent.setGermplasmName(edge.getConnectedNode().getGermplasm().getGermplasmName());
 					parent.setParentType(edge.getParentType());
 					return parent;
@@ -512,7 +512,7 @@ public class PedigreeService {
 			if (entity.getProgenyEdges() != null && request.isIncludeProgeny()) {
 				node.setProgeny(entity.getProgenyEdges().stream().map(edge -> {
 					PedigreeNodeParents progeny = new PedigreeNodeParents();
-					progeny.setGermplasmDbId(edge.getConnectedNode().getGermplasm().getId());
+					progeny.setGermplasmDbId(edge.getConnectedNode().getGermplasm().getId().toString());
 					progeny.setGermplasmName(edge.getConnectedNode().getGermplasm().getGermplasmName());
 					progeny.setParentType(edge.getParentType());
 					return progeny;
@@ -522,7 +522,7 @@ public class PedigreeService {
 				List<PedigreeNodeEntity> siblingEntities = pedigreeRepository.findPedigreeSiblings(entity);
 				node.setSiblings(siblingEntities.stream().map(sibNode -> {
 					PedigreeNodeSiblings progeny = new PedigreeNodeSiblings();
-					progeny.setGermplasmDbId(sibNode.getGermplasm().getId());
+					progeny.setGermplasmDbId(sibNode.getGermplasm().getId().toString());
 					progeny.setGermplasmName(sibNode.getGermplasm().getGermplasmName());
 					return progeny;
 				}).collect(Collectors.toList()));
@@ -560,46 +560,22 @@ public class PedigreeService {
 		}
 	}
 
-	private void updateEntity(PedigreeNodeEntity entity, PedigreeNode node) throws BrAPIServerException {
-		if (node.getGermplasmDbId() != null && entity.getGermplasm() == null) {
-			GermplasmEntity germplasm = germplasmService.getGermplasmEntity(node.getGermplasmDbId());
-			entity.setGermplasm(germplasm);
-		}
-
-		UpdateUtility.updateEntity(node, entity);
-
-		if (node.getCrossingYear() != null)
-			entity.setCrossingYear(node.getCrossingYear());
-		if (node.getFamilyCode() != null)
-			entity.setFamilyCode(node.getFamilyCode());
-		if (node.getPedigreeString() != null)
-			entity.setPedigreeString(node.getPedigreeString());
-
-		if (node.getCrossingProjectDbId() != null) {
-			CrossingProjectEntity crossingProject = crossingProjectService
-					.getCrossingProjectEntity(node.getCrossingProjectDbId());
-			entity.setCrossingProject(crossingProject);
-		}
-	}
-
-
-
 	// This method should be used in use cases where there are no existing node entities representing the list being passed through.
 	private List<PedigreeNodeEntity> createEntitiesInBatch(List<PedigreeNode> nodes)
 		throws BrAPIServerException {
 		List<String> germIds = nodes.stream()
 				.map(PedigreeNode::getGermplasmDbId)
 				.filter(Objects::nonNull)
-				.collect(Collectors.toList());
+				.toList();
 		List<String> crossingProjIds = nodes.stream()
 				.map(PedigreeNode::getCrossingProjectDbId)
 				.filter(Objects::nonNull)
-				.collect(Collectors.toList());
+				.toList();
 
-		Map<String, GermplasmEntity> foundGermsById = germplasmService.findByIds(germIds)
+		Map<UUID, GermplasmEntity> foundGermsById = germplasmService.findByIds(germIds)
 				.stream()
 				.collect(Collectors.toMap(BrAPIBaseEntity::getId, e -> e));
-		Map<String, CrossingProjectEntity> foundCrossingProjsById = crossingProjectService.findCrossingProjectsByIds(crossingProjIds)
+		Map<UUID, CrossingProjectEntity> foundCrossingProjsById = crossingProjectService.findCrossingProjectsByIds(crossingProjIds)
 				.stream()
 				.collect(Collectors.toMap(BrAPIBaseEntity::getId, e -> e));
 
@@ -608,7 +584,7 @@ public class PedigreeService {
 			PedigreeNodeEntity entity = new PedigreeNodeEntity();
 
 			if (node.getGermplasmDbId() != null) {
-				entity.setGermplasm(foundGermsById.get(node.getGermplasmDbId()));
+				entity.setGermplasm(foundGermsById.get(UUID.fromString(node.getGermplasmDbId())));
 			}
 
 			UpdateUtility.updateEntity(node, entity);
@@ -621,7 +597,7 @@ public class PedigreeService {
 				entity.setPedigreeString(node.getPedigreeString());
 
 			if (node.getCrossingProjectDbId() != null) {
-				entity.setCrossingProject(foundCrossingProjsById.get(node.getCrossingProjectDbId()));
+				entity.setCrossingProject(foundCrossingProjsById.get(UUID.fromString(node.getCrossingProjectDbId())));
 			}
 
 			result.add(entity);
@@ -638,27 +614,25 @@ public class PedigreeService {
 				.stream()
 				.map(nodePair -> nodePair.getRight().getCrossingProjectDbId())
 				.filter(Objects::nonNull)
-				.collect(Collectors.toList());
+				.toList();
 
 		List<String> germIdsWithParentNodes = entityDtoPairsByGermId.entrySet()
 				.stream()
 				.filter(entry -> entry.getValue().getRight().getParents() != null)
 				.map(Entry::getKey)
-				.collect(Collectors.toList());
+				.toList();
 
 		List<String> germIdsWithProgenyNodes = entityDtoPairsByGermId.entrySet()
 				.stream()
 				.filter(entry -> entry.getValue().getRight().getProgeny() != null)
 				.map(Entry::getKey)
-				.collect(Collectors.toList());
+				.toList();
 
-		new HashMap<>();
-
-		Map<String, GermplasmEntity> foundGermsById = germplasmService.findByIds(germIds)
+		Map<UUID, GermplasmEntity> foundGermsById = germplasmService.findByIds(germIds)
 				.stream()
 				.collect(Collectors.toMap(BrAPIBaseEntity::getId, e -> e));
 
-		Map<String, CrossingProjectEntity> foundCrossingProjsById = crossingProjectService.findCrossingProjectsByIds(crossingProjIds)
+		Map<UUID, CrossingProjectEntity> foundCrossingProjsById = crossingProjectService.findCrossingProjectsByIds(crossingProjIds)
 				.stream()
 				.collect(Collectors.toMap(BrAPIBaseEntity::getId, e -> e));
 
@@ -675,7 +649,7 @@ public class PedigreeService {
 			PedigreeNode node = entityDtoPairByGermId.getValue().getRight();
 
 			if (node.getGermplasmDbId() != null && entity.getGermplasm() == null) {
-				entity.setGermplasm(foundGermsById.get(node.getGermplasmDbId()));
+				entity.setGermplasm(foundGermsById.get(UUID.fromString(node.getGermplasmDbId())));
 			}
 
 			UpdateUtility.updateEntityCheckExRefs(node, entity);
@@ -688,7 +662,7 @@ public class PedigreeService {
 				entity.setPedigreeString(node.getPedigreeString());
 
 			if (node.getCrossingProjectDbId() != null) {
-				entity.setCrossingProject(foundCrossingProjsById.get(node.getCrossingProjectDbId()));
+				entity.setCrossingProject(foundCrossingProjsById.get(UUID.fromString(node.getCrossingProjectDbId())));
 			}
 		}
 	}
@@ -697,21 +671,21 @@ public class PedigreeService {
 								   Map<String, Pair<PedigreeNodeEntity, PedigreeNode>> entityDtoPairsByGermId)
 		throws BrAPIServerException {
 
-		List<String> parentEdgesToDelete = new ArrayList<>();
+		List<UUID> parentEdgesToDelete = new ArrayList<>();
 
 		SearchQueryBuilder<PedigreeEdgeEntity> search = new SearchQueryBuilder<>(PedigreeEdgeEntity.class);
 		search.appendList(germIdsWithParentNodes, "connectedNode.germplasm.id");
 		search.appendEnum(PedigreeEdgeEntity.EdgeType.child, "edgeType");
 		List<PedigreeEdgeEntity> existingParentEdges = pedigreeEdgeRepository.findAllBySearch(search);
 
-		List<String> existingParentEdgesFromPassedEntities = entityDtoPairsByGermId.entrySet()
+		List<UUID> existingParentEdgesFromPassedEntities = entityDtoPairsByGermId.entrySet()
 				.stream()
 				.flatMap(entry -> entry.getValue().getLeft().getParentEdges().stream())
 				.map(BrAPIBaseEntity::getId)
-				.collect(Collectors.toList());
+				.toList();
 
 		parentEdgesToDelete.addAll(existingParentEdgesFromPassedEntities);
-		parentEdgesToDelete.addAll(existingParentEdges.stream().map(BrAPIBaseEntity::getId).collect(Collectors.toList()));
+		parentEdgesToDelete.addAll(existingParentEdges.stream().map(BrAPIBaseEntity::getId).toList());
 
 		if (!parentEdgesToDelete.isEmpty()) {
 			pedigreeEdgeRepository.deleteAllByIdInBatch(parentEdgesToDelete);
@@ -720,12 +694,12 @@ public class PedigreeService {
 		List<Pair<PedigreeNodeEntity, PedigreeNode>> nodesWithParents = entityDtoPairsByGermId.values()
 				.stream()
 				.filter(p -> !p.getRight().getParents().isEmpty())
-				.collect(Collectors.toList());
+				.toList();
 
 		List<String> germIdsOfAllParents = nodesWithParents.stream()
 				.flatMap(p -> p.getRight().getParents().stream())
 				.map(PedigreeNodeParents::getGermplasmDbId)
-				.collect(Collectors.toList());
+				.toList();
 
 
 		List<PedigreeNodeEntity> createdOrFoundParentNodes = findOrCreatePedigreeNodesFromGermplasmIds(germIdsOfAllParents);
@@ -736,7 +710,7 @@ public class PedigreeService {
 			for (PedigreeNodeParents parentNode : nodeDto.getParents()) {
 				// Is it possible that more that any of these parents share the same germplasm ID?  If so, we need to figure out how to handle that use case.
 				PedigreeNodeEntity parentEntity = createdOrFoundParentNodes.stream()
-						.filter(pne -> pne.getGermplasm().getId().equals(parentNode.getGermplasmDbId()))
+						.filter(pne -> pne.getGermplasm().getId().equals(UUID.fromString(parentNode.getGermplasmDbId())))
 						.findFirst()
 						.orElse(null);
 
@@ -753,7 +727,7 @@ public class PedigreeService {
 	private void updateChildEdges(List<String> germIdsWithProgenyNodes,
 								  Map<String, Pair<PedigreeNodeEntity, PedigreeNode>> entityDtoPairsByGermId)
 		throws BrAPIServerException {
-		List<String> progenyEdgesToDelete = new ArrayList<>();
+		List<UUID> progenyEdgesToDelete = new ArrayList<>();
 
 		SearchQueryBuilder<PedigreeEdgeEntity> search = new SearchQueryBuilder<PedigreeEdgeEntity>(PedigreeEdgeEntity.class);
 
@@ -761,14 +735,14 @@ public class PedigreeService {
 		search.appendEnum(PedigreeEdgeEntity.EdgeType.parent, "edgeType");
 		List<PedigreeEdgeEntity> existingProgenyEdges = pedigreeEdgeRepository.findAllBySearch(search);
 
-		List<String> existingProgenyEdgeFromPassedEntities = entityDtoPairsByGermId.entrySet()
+		List<UUID> existingProgenyEdgeFromPassedEntities = entityDtoPairsByGermId.entrySet()
 				.stream()
 				.flatMap(entry -> entry.getValue().getLeft().getProgenyEdges().stream())
 				.map(BrAPIBaseEntity::getId)
-				.collect(Collectors.toList());
+				.toList();
 
 		progenyEdgesToDelete.addAll(existingProgenyEdgeFromPassedEntities);
-		progenyEdgesToDelete.addAll(existingProgenyEdges.stream().map(BrAPIBaseEntity::getId).collect(Collectors.toList()));
+		progenyEdgesToDelete.addAll(existingProgenyEdges.stream().map(BrAPIBaseEntity::getId).toList());
 
 		if (!progenyEdgesToDelete.isEmpty()) {
 			pedigreeEdgeRepository.deleteAllByIdInBatch(progenyEdgesToDelete);
@@ -777,12 +751,12 @@ public class PedigreeService {
 		List<Pair<PedigreeNodeEntity, PedigreeNode>> nodesWithProgeny = entityDtoPairsByGermId.values()
 				.stream()
 				.filter(p -> !p.getRight().getProgeny().isEmpty())
-				.collect(Collectors.toList());
+				.toList();
 
 		List<String> germIdsOfAllProgeny = nodesWithProgeny.stream()
 				.flatMap(p -> p.getRight().getParents().stream())
 				.map(PedigreeNodeParents::getGermplasmDbId)
-				.collect(Collectors.toList());
+				.toList();
 
 		List<PedigreeNodeEntity> createdOrFoundProgenyNodes = findOrCreatePedigreeNodesFromGermplasmIds(germIdsOfAllProgeny);
 
@@ -793,7 +767,7 @@ public class PedigreeService {
 
 			for (PedigreeNodeParents childNode : nodeDto.getProgeny()) {
 				PedigreeNodeEntity childEntity = createdOrFoundProgenyNodes.stream()
-						.filter(pne -> pne.getGermplasm().getId().equals(childNode.getGermplasmDbId()))
+						.filter(pne -> pne.getGermplasm().getId().equals(UUID.fromString(childNode.getGermplasmDbId())))
 						.findFirst()
 						.orElse(null);
 
@@ -807,8 +781,7 @@ public class PedigreeService {
 		}
 	}
 
-	public List<PedigreeNode> convertFromGermplasmToPedigreeBatchUsingNames(List<Germplasm> germplasms)
-		throws BrAPIServerException{
+	public List<PedigreeNode> convertFromGermplasmToPedigreeBatchUsingNames(List<Germplasm> germplasms) {
 		List<PedigreeNode> result = new ArrayList<PedigreeNode>();
 
 		Map<Germplasm, String> germsByPedigreeMother = new HashMap<>();
@@ -897,14 +870,14 @@ public class PedigreeService {
 
 		if (motherGerm != null) {
 			PedigreeNodeParents mother = new PedigreeNodeParents();
-			mother.setGermplasmDbId(motherGerm.getId());
+			mother.setGermplasmDbId(motherGerm.getId().toString());
 			mother.setGermplasmName(motherGerm.getGermplasmName());
 			mother.setParentType(ParentType.FEMALE);
 			node.addParentsItem(mother);
 		}
 		if (fatherGerm != null) {
 			PedigreeNodeParents father = new PedigreeNodeParents();
-			father.setGermplasmDbId(fatherGerm.getId());
+			father.setGermplasmDbId(fatherGerm.getId().toString());
 			father.setGermplasmName(fatherGerm.getGermplasmName());
 			father.setParentType(ParentType.MALE);
 			node.addParentsItem(father);
